Change journal volume/number/pages format Fix class bug in entry

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -35,4 +35,4 @@ bibliography.submitted.abbrev=sub.
 bibliography.translator=translator
 bibliography.translator.abbrev=trans.
 bibliography.volume=volume
-bibliography.volume.abbrev=vo.
+bibliography.volume.abbrev=vol.
